--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.androidex.apps.aexAdvert.MainActivityFragment"
+    tools:context="com.androidex.apps.aexadvert.MainActivityFragment"
     tools:showIn="@layout/advert_main">
 
     <TextView
